2003-11-19  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am (CLEANFILES): Make sure gnome-stones cleans up
	properly.

2003-10-29  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am (INCLUDES): Removed *_DISABLE_DEPRECATED.
	* objects/Makefile.am: Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* view.c:
	* preferences.c:
	* main.c: Replaced deprecated functions with gtk-2.4 equivalents.

2003-08-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* preferences.c (preferences_dialog_new): Make the switch-level
	slider actually wide enough to work.

2003-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnome-stones.xml: Updated for 2.4, including the
	screenshots.

2003-07-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* objects/gnome-stones.c:
	* objects/gnomekoban.c: Compiler warning fixes.

2003-07-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* main.c: Make the menus sensitive to the state of the game. This
	is the last part of bug #97317.

2003-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnome-stones.desktop.in: Update name to fit HIG (bug 116916).

2003-07-02  Callum McKenzie <callum@physics.otago.ac.nz>
        * Makefile.am: Build fixes.

2003-06-26  William Jon McCann  <mccann@jhu.edu>

	* graphics/Makefile.am (pixmap_DATA): Removed title.png.

	* main.c (title_image_load): Enabled new text title screen.

2003-06-23  Abel Cheung  <maddog@linux.org.hk>

	* gnome-stones.schemas.in: Fix description typo.

2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* sound.c (sound_register): Use g_build_filename.

	* object.c (plugin_load_plugins_in_dir): Use glib file utilities.