@@ -26,7 +26,7 @@ Number=3
 [Start caves]
 Cave001=Cave Test1
 Cave002=Cave Test3
-Number=1
+Number=2
 
 [Cave Test1]
 Diamonds needed= 20
