@@ -1,3 +1,15 @@
+2004-01-20  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* main.h: 
+	* main.c:	
+	* preferences.c: Use only one exit function. This should fix bug
+	#131856.
+
+	* default.caves.in: Set the number of start caves correctly.
+	
+	* main.c (load_game): Added code to check that the selected cave
+	is valid.
+
 2003-11-19  Callum McKenzie  <callum@localhost.localdomain>
 
 	* Makefile.am (CLEANFILES): Make sure gnome-stones cleans up
